[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/entities/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/entities/PieceOfShitEnemy.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/entities/piece_of_shit_enemy/normal_map_spritesheet.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/entities/piece_of_shit_enemy/spritesheet.png" type="Texture" id=4]
[ext_resource path="res://scripts/entities/PieceOfShitFSM.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 7.811 )

[sub_resource type="CircleShape2D" id=3]
radius = 190.042

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[sub_resource type="Animation" id=5]
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 255, 255, 255, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 6 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[node name="Enemy" groups=[
"ForeignEntities",
] instance=ExtResource( 1 )]
scale = Vector2( 0.5, 0.5 )
collision_layer = 80
collision_mask = 35
script = ExtResource( 2 )
HEALTH = 1

[node name="Texture" parent="." index="0"]
texture = ExtResource( 4 )
normal_map = ExtResource( 3 )
hframes = 33

[node name="Collider" parent="." index="1"]
position = Vector2( 0, 3.904 )
shape = SubResource( 1 )

[node name="PlayerDetectionWakeup" type="Area2D" parent="." index="2"]
visible = false
collision_layer = 16

[node name="Collider" type="CollisionShape2D" parent="PlayerDetectionWakeup" index="0"]
shape = SubResource( 3 )

[node name="PlayerChaseCast" type="RayCast2D" parent="." index="3"]
visible = false
scale = Vector2( 2, 3 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 35

[node name="RightPlayerAttackDetection" type="RayCast2D" parent="." index="4"]
visible = false
enabled = true
cast_to = Vector2( 26, 0 )

[node name="LeftPlayerAttackDetection" type="RayCast2D" parent="." index="5"]
visible = false
enabled = true
cast_to = Vector2( -26, 0 )

[node name="Animation" parent="." index="6"]
anims/asleep = SubResource( 4 )
anims/death = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/wake_up = SubResource( 7 )
anims/walk = SubResource( 8 )

[node name="StateMachine" type="Node2D" parent="." index="7"]
script = ExtResource( 5 )

[node name="FloorLeft" type="RayCast2D" parent="." index="8"]
visible = false
position = Vector2( -6.967, 11.608 )
enabled = true
cast_to = Vector2( 0, 12 )
collision_mask = 2

[node name="FloorRight" type="RayCast2D" parent="." index="9"]
visible = false
position = Vector2( 6.635, 11.43 )
enabled = true
cast_to = Vector2( 0, 12 )
collision_mask = 2

[node name="WallRight" type="RayCast2D" parent="." index="10"]
visible = false
enabled = true
cast_to = Vector2( 24, 0 )
collision_mask = 32

[node name="WallLeft" type="RayCast2D" parent="." index="11"]
visible = false
enabled = true
cast_to = Vector2( -24, 0 )
collision_mask = 32

[node name="JumpTop" type="RayCast2D" parent="." index="12"]
position = Vector2( 0, -4.831 )
enabled = true
cast_to = Vector2( -12, 0 )
collision_mask = 2147483776
collide_with_areas = true

[node name="JumpBottom" type="RayCast2D" parent="." index="13"]
position = Vector2( 0, 11.081 )
enabled = true
cast_to = Vector2( -12, 0 )
collision_mask = 128
collide_with_areas = true

[node name="MouthPosition" type="Position2D" parent="." index="14"]
position = Vector2( 13, 2 )

[node name="Label" type="Label" parent="." index="15"]
visible = false
margin_left = -18.0
margin_top = -20.0
margin_right = 22.0
margin_bottom = -6.0
text = "state"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
